Rename _usdc columns, add token tracking to transactions
